Adding Writing Parts and Formatting

--- a/Heart_Disease.ipynb
+++ b/Heart_Disease.ipynb
@@ -1,11 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Title: Data Analysis of Health Factors Potentially Causing Heart Disease\n",
+    "\n",
+    "                                                                                                     Introduction:\n",
+    "\n",
+    "Heart disease is a prevalent health issue in modern society. According to the Center for Disease Control, 47% of Americans have at least 1 of 3 contributing factors to heart disease, such as high blood pressure or a smoking habit. The more contributing factors one has, the higher the risk of heart disease. By analyzing one’s medical history for such factors, it is possible to predict their personal risk of heart disease.\n",
+    "\n",
+    "Our project aimed to analyze the medical history of multiple patients and determine whether select factors were conducive of heart disease in any given patient down the line. To do this, we used the Heart Disease Dataset provided by the UCI Machine Learning (UCIML) repository which provided the factors we wished to analyze. Hence, the predictive question that we want to answer through this project is: “How do factors such as age, cholesterol, and chest pain predict one's artery blockage?“. \n",
+    "\n",
+    "We made visualizations for the main predictors we are considering for our data analysis. Chest pain, age, gender, and cholesterol level are being used to predict “num”, or the likelihood of heart disease by examining the percentage of blood vessels narrowing. In the “num” column, there are 2 possibilities - either the diameter of the blood vessel narrows by less than 50% or by more than 50%. The latter scenario is indicative of heart disease. For two of the plots (gender, chest pain), we used data that was filtered for num = “>50% diameter narrowing” because we wanted to establish those trends amongst people who were already more likely to get a heart disease. \n",
+    "\n",
+    "                                                                                                      Methods and Results:\n",
+    "\n",
+    "To start, we loaded the dataset from its URL into a container variable called heart_disease. Since our dataset was missing column names, we added these in as per the specifications of the dataset (Table 2). In addition, our dataset also used numbers to refer to various conditions, so we had to redefine these in order to make the table more readable; an example would be renaming the num column values (which measures blood vessel diameter) from binary 0 and 1 (2, 3 and 4 are equivalent to 1)  to their respective amounts of diameter change (in Table 3).\n",
+    "\n",
+    "Out of the given attributes, we wanted to choose certain variables which showed a correlation with blood vessel narrowing (“num”). To determine these variables, we created visualizations plotting “num” against observations from cholesterol level (“chol”), age, gender (“sex”), chest pain (“cp”), and fasting blood sugar level (“fbs”) using the cleaned and wrangled data. \n",
+    "\n",
+    "To check whether age was a reasonable factor of assessment here, we plotted a histogram distribution (Figure 1) for patients with both  <50% and >50% diameter narrowing of blood vessels at varying ages (all observations used, regardless of occurrence of heart disease). Based on the visualization, there was a similar bell-shaped distribution for both observations (< 50% and >50 % narrowing). Apart from outliers, the people with > 50% diameter narrowing are mostly older in age than people with < 50% diameter narrowing, and there is a higher count of the former. In the graph, the count for people aged 56 - 58 years with > 50% diameter narrowing was high, and was smaller for people with < 50 % diameter narrowing at 49-53 years for. \n",
+    "\n",
+    "The same was done for cholesterol level (Figure 2) through which we observed that most of the people who have higher cholesterol level have a higher count of >50% diameter narrowing; which suggests that there could be a positive relationship between high cholesterol level and occurrence of heart disease. Apart from some outliers, most of the people with <50% diameter narrowing have either lower cholesterol level, or a significantly lower count of high cholesterol. On the other hand, more people with >50% diameter narrowing have a bigger count of high cholesterol levels. The average of the 3 highest peaks, based on the number of people with an above-normal cholesterol level, is approximately 230 mg/dl - which accounts for the total serum cholesterol in mg/dl. \n",
+    "\n",
+    "We also plotted a bar chart (figure 3) to investigate how 4 different types of chest pains vary amongst people with >50% diameter narrowing (heart disease likely to occur). There is a distinct difference amongst the amount of people having different types of chest pain. The number of patients with atypical angina is similar to that of typical angina, which is the lowest of the four types. On the other hand, non-anginal pain has almost two times higher count of patients. Moreover, asymptomatic chest pain patients get the most counts of all people with >50% diameter narrowing (above 100 observations). \n",
+    "\n",
+    "\n",
+    "Another bar chart (figure 4) visualizes how patients of two genders (male, female) in this dataset vary in terms of likelihood of heart disease on the basis of blood vessels narrowing. Like the chest pain plot, we used the “num” column filtered out for heart disease prone patients (observations with ‘>50% diameter narrowing’ parameter) to observe whether there is any trend in gender that can be correlated with occurrence of heart disease. Through the visualization, it can be observed that the number/count of male patients is much higher than that of female patients. We can infer that males (count = 114) are more likely to get a heart disease as compared to females (count = 25), according to this given dataset. \n",
+    "\n",
+    "\n",
+    "Lastly, we made a bar chart (figure 5) to visualize if fasting blood sugar level influences narrowing of blood vessels, and hence likelihood of heart disease. We used the filtered data (num = >50% narrowing) so we could observe a correlation. According to the data given to us, a higher number of people (more than 200) actually had a normal fasting blood sugar level < 120 mg/dl despite having >50% diameter narrowing of blood vessels, and less than 50 people showed a fasting blood sugar level >120 mg/dl.\n",
+    "Based on the relation between instances of heart disease and the aforementioned factors, we chose age, chest pain and cholesterol as our predictors for our num column, which represents percent blood vessel narrowing. Chest pain and cholesterol were scaled for increased accuracy.\n",
+    "\n",
+    "Based on these predictors, we achieved an accuracy of 72.9%. It should be noted that the instances of greater than 50% diameter narrowing skewed the data in that direction, since we had to convert values 2, 3 & 4 to 1 in the num column. This represented roughly 90 such observations, which if removed to maintain proportion, gave us an 85% accuracy. However, since these are genuine diagnoses, at the advice of the teaching team we believed it best to keep this data despite its reducing effects on accuracy.\n",
+    "\n",
+    "Following this, we needed to determine the optimal number of neighbors to help deliver a realistic classification. Based on our visualization of the highest accuracy versus the number of neighbors, we determined 11 neighbors were optimal for our analysis. Our accuracy estimate was 72.97%.\n",
+    "\n",
+    " "
+   ]
   },
   {
    "cell_type": "code",
@@ -208,6 +241,7 @@
     }
    ],
    "source": [
+    "# ======== CREATING COLUMN NAMES ===============\n",
     "colnames(heart_disease) <- c(\"age\",\n",
     "                   \"sex\",\n",
     "                   \"cp\",\n",
@@ -461,11 +495,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -706,6 +735,7 @@
     }
    ],
    "source": [
+    "# ======== FASTING BLOOD SUGAR GRAPH ===============\n",
     "heart_disease_fbs <- heart_disease %>% \n",
     "select(fbs, num)\n",
     "\n",
@@ -800,6 +830,7 @@
     }
    ],
    "source": [
+    "# ======== SCLALING HEART DISEASE DATA ===============\n",
     "heart_disease_scaled <- heart_disease %>%\n",
     "    mutate(scaled_age = scale(age, center = TRUE),\n",
     "           scaled_sex = scale(sex, center = TRUE),\n",
@@ -821,6 +852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ======== CREATING TRAINING AND TESTING SPLIT ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_split <- initial_split(heart_disease_scaled, prop = 0.75, strata = num)\n",
@@ -855,6 +887,7 @@
     }
    ],
    "source": [
+    "# ======== PREPARING RECIPE AND KNN SPEC ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_recipe <- recipe(num ~ age + scaled_cp + scaled_chol, data = heart_disease_scaled) %>%\n",
@@ -873,6 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ======== PERFORMING CROSS VALIDATION AND CREATING A WORKFLOW ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_vfold <- vfold_cv(heart_disease_train, v = 5, strata = num)\n",
@@ -934,6 +968,7 @@
     }
    ],
    "source": [
+    "# ======== FINDING CROSS VALIDIDATIONS ACCURACY ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_metrics <-collect_metrics(heart_disease_resample_fit)\n",
@@ -969,6 +1004,7 @@
     }
    ],
    "source": [
+    "# ======== TUNING TO FIND IDEAL K VALUE ===============\n",
     "set.seed(1234)\n",
     "\n",
     "knn_tune <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) %>%\n",
@@ -1048,6 +1084,7 @@
     }
    ],
    "source": [
+    "# ======== CREATING WORKFLOW FOR IDEAL K VALUE ===============\n",
     "set.seed(1234)\n",
     "\n",
     "knn_results <- workflow() %>%\n",
@@ -1087,6 +1124,7 @@
     }
    ],
    "source": [
+    "# ======== CREATING A GGPLOT FOR NEIGHBORS ===============\n",
     "set.seed(1234)\n",
     "\n",
     "accuracies <- knn_results %>%\n",
@@ -1143,6 +1181,7 @@
     }
    ],
    "source": [
+    "# ======== SPEC AND WORKFLOW WITH 11 NEIGHBORS ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 11) %>%\n",
@@ -1244,6 +1283,7 @@
     }
    ],
    "source": [
+    "# ======== ADDING TEST SPLIT TO HEART DISEASE TABLE ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_predictions <- predict(heart_disease_workflow, heart_disease_test) %>%\n",
@@ -1306,6 +1346,7 @@
     }
    ],
    "source": [
+    "# ======== CALCULATING CLASIFIER ACCURACY ===============\n",
     "set.seed(1234)\n",
     "\n",
     "heart_disease_predictions %>%\n",
@@ -1332,6 +1373,7 @@
     }
    ],
    "source": [
+    "# ======== CREATING CONFUSION MATRIX ===============\n",
     "confusion <- heart_disease_predictions %>%\n",
     "             conf_mat(truth = num, estimate = .pred_class)\n",
     "\n",
@@ -1346,11 +1388,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "                                                                                             Discussion:\n",
+    "\n",
+    "\n",
+    "With the heart disease data from Center for Machine Learning and Intelligent Systems a classifier using 3 predictors was created. Given 3 predictors, an accuracy of 33.3% would indicate a random prediction. Our classifier has an accuracy of 72.9%, while in the medical field this is not ideal, this model predicts if arterial narrowing is greater or less than 50% and does not make life or death predictions. Furthermore, through analysis of the visualizations it seems that while most observations are consistent, however, substantial outliers exist which could reduce the accuracy of the classifier to 72.9%. Judging by the accuracy of the classifier, it appears that the 3 predictors used (age, cholesterol levels, and chest pain) are strong predictors of artery diameter narrowing. The average age and cholesterol levels for greater than 50% artery narrowing is 56.6 years and 251.5 mg/dL, respectively. Through these observations, we can conclude that there may be a positive correlation between older age levels, higher cholesterol levels, and occurrence of heart disease (assuming that greater than 50% narrowing is conducive of heart disease risk).\n",
+    "For reference, healthy cholesterol levels should be less than or equal to 200 mg/dl (usually range from 190-200 mg/dl).\n",
+    "From this data, we can begin to form an understanding of the fact that higher cholesterol levels are present in patients with >50% diameter narrowing, which suggests that maintaining cholesterol level at around 200 mg/dl is ideal and would help in reducing the risk of heart disease. \n",
+    " \n",
+    "So, we can conclude that asymptomatic chest pain is the most possible and common type of pain that occurs in people with > 50% diameter narrowing, which is conducive to heart disease. Asymptomatic, by definition, means that oftentimes you can’t sense the symptoms. So, this type of chest pain is commonly associated with “silent heart attacks”. \n",
+    "\n",
+    " These findings lineup with our group's expectations for results. Increased age is often linked to heart disease and heart disease is the most common cause of death. Therefore, it does not come as a surprise that there is a strong relation between age and artery narrowing. The correlation between cholesterol levels and artery narrowing was also expected. This is because cholesterol is directly related to artery narrowing and is a material that sticks to the side of blood vessels. \n",
+    "A shocking result though was the one with fasting blood sugar. A higher blood sugar level may be associated with diabetes, and it can damage blood vessels and the nerves controlling the heart. For this reason, people with diabetes (high FBS level) are also more likely to risk getting a heart disease over time. But, the UCIML dataset’s findings said otherwise, because the fasting blood sugar level was <120 mg/dl for the majority of the patients with >50% narrowing. As this did not show a positive relationship between fasting blood sugar level and “num” (%age narrowing), we decided to omit this data from our analysis so we could focus on the attributes which showed more reliable outcomes in comparison. \n",
+    " \n",
+    "It is often said in medical circles that prevention is better than cure. By using predictive software, we can monitor a patient’s values for predictor variables with each visit to their family doctor, and backtest against our classification software in order to predict the likelihood of the patient suffering heart disease. Preventative measures such as a workout regimen, diet and other supplements can then be implemented by the healthcare staff. As validation, such a system already exists; according to the National Library of Medicine, the effective heart disease prediction system (EHDPS) is an existing software that “uses 15 medical parameters such as age, sex, blood pressure, cholesterol, and obesity for prediction” (Singh et al, 2019), as part of a neural network.\n",
+    " \n",
+    "Regression and classification is fairly rudimentary in comparison to an actual neural network. The software should not only be able to predict likelihood, but also learn how to deal with outliers and refine its own accuracy. Therefore, some of the biggest questions that can come out of these findings are as follows:\n",
+    " \n",
+    "What metrics can we use to assess outliers, and how to proof our software against outliers?\n",
+    "Can we dampen or sharpen the magnitude of existing metrics in application to outliers in order to output an accurate likelihood in the face of outliers?\n",
+    "Which mechanics can we employ to turn the software from relatively hardcoded classification technology into a neural network?\n",
+    "Regarding HIPAA compliance, how can we ensure our software respects peoples’ privacy?\n",
+    "Lastly, how do we implement this software at scale?\n",
+    " \n",
+    "\n",
+    "\n",
+    "                                                                           References: \n",
+    "Know your risk for heart disease. (2019, December 09). Retrieved April 9, 2022, from https://www.cdc.gov/heartdisease/risk_factors.htm\n",
+    "Understanding your cholesterol test results. (n.d.). Retrieved April 9, 2022, from https://www.heartuk.org.uk/cholesterol/understanding-your-cholesterol-test-results-\n",
+    "Singh, P., Singh, S., & Pandi-Jain, G. (2018, March 15). Effective heart disease prediction system using data mining techniques. Retrieved April 9, 2022, from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5863635/#:~:text=The%20system%20uses%2015%20medical,and%20patterns%2C%20to%20be%20established\n",
+    "(n.d.). Retrieved April 9, 2022, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
+    "Mayo Clinic. (n.d.). Retrieved April 9, 2022, from https://www.mayoclinic.org/\n",
+    "Diabetes, heart disease, & stroke. (n.d.). Retrieved April 9, 2022, from https://www.niddk.nih.gov/health-information/diabetes/overview/preventing-problems/heart-disease-stroke\n"
+   ]
   },
   {
    "cell_type": "code",
