--- a/Heart_Disease.ipynb
+++ b/Heart_Disease.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "\n",
     "Lastly, we made a bar chart (figure 5) to visualize if fasting blood sugar level influences narrowing of blood vessels, and hence likelihood of heart disease. We used the filtered data (num = >50% narrowing) so we could observe a correlation. According to the data given to us, a higher number of people (more than 200) actually had a normal fasting blood sugar level < 120 mg/dl despite having >50% diameter narrowing of blood vessels, and less than 50 people showed a fasting blood sugar level >120 mg/dl.\n",
-    "Based on the relation between instances of heart disease and the aforementioned factors, we chose age, chest pain and cholesterol as our predictors for our num column, which represents percent blood vessel narrowing. Chest pain and cholesterol were scaled for increased accuracy.\n",
+    "Based on the relation between instances of heart disease and the aforementioned factors, we chose age, chest pain and cholesterol as our predictors for our num column, which represents percent blood vessel narrowing. Chest pain and cholesterol were scaled for increased accuracy. Gender was removed as a predictor as it was significantly reducing the accuracy of the classifier.\n",
     "\n",
     "Based on these predictors, we achieved an accuracy of 72.9%. It should be noted that the instances of greater than 50% diameter narrowing skewed the data in that direction, since we had to convert values 2, 3 & 4 to 1 in the num column. This represented roughly 90 such observations, which if removed to maintain proportion, gave us an 85% accuracy. However, since these are genuine diagnoses, at the advice of the teaching team we believed it best to keep this data despite its reducing effects on accuracy.\n",
     "\n",
@@ -1416,20 +1416,19 @@
     "\n",
     "\n",
     "                                                                           References: \n",
+    "Diabetes, heart disease, & stroke. (n.d.). Retrieved April 9, 2022, from https://www.niddk.nih.gov/health-information/diabetes/overview/preventing-problems/heart-disease-stroke\n",
+    "\n",
     "Know your risk for heart disease. (2019, December 09). Retrieved April 9, 2022, from https://www.cdc.gov/heartdisease/risk_factors.htm\n",
-    "Understanding your cholesterol test results. (n.d.). Retrieved April 9, 2022, from https://www.heartuk.org.uk/cholesterol/understanding-your-cholesterol-test-results-\n",
-    "Singh, P., Singh, S., & Pandi-Jain, G. (2018, March 15). Effective heart disease prediction system using data mining techniques. Retrieved April 9, 2022, from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5863635/#:~:text=The%20system%20uses%2015%20medical,and%20patterns%2C%20to%20be%20established\n",
-    "(n.d.). Retrieved April 9, 2022, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
+    "\n",
     "Mayo Clinic. (n.d.). Retrieved April 9, 2022, from https://www.mayoclinic.org/\n",
-    "Diabetes, heart disease, & stroke. (n.d.). Retrieved April 9, 2022, from https://www.niddk.nih.gov/health-information/diabetes/overview/preventing-problems/heart-disease-stroke\n"
+    "\n",
+    "(n.d.). Retrieved April 9, 2022, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
+    "\n",
+    "Singh, P., Singh, S., & Pandi-Jain, G. (2018, March 15). Effective heart disease prediction system using data mining techniques. Retrieved April 9, 2022, from https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5863635/#:~:text=The%20system%20uses%2015%20medical,and%20patterns%2C%20to%20be%20established\n",
+    "\n",
+    "Understanding your cholesterol test results. (n.d.). Retrieved April 9, 2022, from https://www.heartuk.org.uk/cholesterol/understanding-your-cholesterol-test-results\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
